--- a/.github/workflows/ci-swiftpm.yml
+++ b/.github/workflows/ci-swiftpm.yml
@@ -23,10 +23,10 @@ jobs:
   swiftpm_darwin:
     name: SwiftPM, Darwin, Xcode ${{ matrix.xcode }}
     needs: filter
-    runs-on: macos-12
+    runs-on: macos-14
     strategy:
       matrix:
-        xcode: ["14.0.1"]
+        xcode: ["15.3", "16.1"]
       fail-fast: false
     env:
       DEVELOPER_DIR: "/Applications/Xcode_${{ matrix.xcode }}.app"
@@ -45,10 +45,9 @@ jobs:
     strategy:
       matrix:
         container:
-          - swift:5.7
-          - swift:5.8
           - swift:5.9
           - swift:5.10
+          - swift:6.0
       fail-fast: false
     container: ${{ matrix.container }}
     steps:
