--- a/.github/workflows/ci-swiftpm.yml
+++ b/.github/workflows/ci-swiftpm.yml
@@ -26,7 +26,25 @@ jobs:
     runs-on: macos-14
     strategy:
       matrix:
-        xcode: ["15.3", "16.1"]
+        xcode: ["16.1"]
+      fail-fast: false
+    env:
+      DEVELOPER_DIR: "/Applications/Xcode_${{ matrix.xcode }}.app"
+    steps:
+      - uses: actions/checkout@v4
+        if: ${{ needs.filter.outputs.should_skip != 'true' }}
+      - run: swift build
+        if: ${{ needs.filter.outputs.should_skip != 'true' }}
+      - run: swift test
+        if: ${{ needs.filter.outputs.should_skip != 'true' }}
+
+  swiftpm_darwin_15:
+    name: SwiftPM, Darwin 15, Xcode ${{ matrix.xcode }}
+    needs: filter
+    runs-on: macos-15
+    strategy:
+      matrix:
+        xcode: ["16.4"]
       fail-fast: false
     env:
       DEVELOPER_DIR: "/Applications/Xcode_${{ matrix.xcode }}.app"
@@ -45,9 +63,9 @@ jobs:
     strategy:
       matrix:
         container:
-          - swift:5.9
-          - swift:5.10
           - swift:6.0
+          - swift:6.1
+          - swift:6.2
       fail-fast: false
     container: ${{ matrix.container }}
     steps:
